vcs-v1/kustomize/vcs-v1/overlays/local/vcs-awskms/vcs/add-key.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vcs
spec:
  template:
    spec:
      volumes:
        - name: kms-key
          secret:
            secretName: vcs-kms-key-awskms
      containers:
        - name: vcs
          volumeMounts:
            - name: kms-key
              mountPath: /etc/keys
