vcs-v1/kustomize/vcs-v1/overlays/local/vcs-awskms/vcs/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vcs-awskms
spec:
  tls:
  - hosts:
      - vcs-awskms.||DOMAIN||
    secretName: ingress-tls-secret
  rules:
  - host: vcs-awskms.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vcs-awskms
            port:
              name: http
